# Sirius-c-Projects

./: .gitignore  README.md  ReadMe.md
Linked_list/: CMakeLists.txt  ReadMe.md  data.txt  input.txt
Linked_list/src/: linked_list.cpp  linked_list.h  main.cpp
Prime/: CMakeCache.txt  CMakeLists.txt  Description.txt  main.cpp
Robot/: CMakeLists.txt  ReadMe.md  plotting.py
Robot/src/: command.txt  commands.txt  error_processing.cpp  main.cpp  parser.cpp  plotting.cpp  points.txt  robot.cpp  robot.h
Robot/test/: test.cpp
c_and_python/: CMakeLists.txt  main.cpp  script.py
checking_some_functions/: CMakeLists.txt  main.cpp  square_solver.cpp  square_solver.h
dot_in_figure/: CMakeCache.txt  CMakeLists.txt  Line.cpp  Line.h  ReadME.md  ReadME.txt  file.txt  main.cpp  poly.txt  test.cpp
dot_in_figure/src/: CMakeLists.txt  Line.h  main.cpp  solver.cpp  solver.h
dot_in_figure/test/: CMakeLists.txt  test.cpp
dot_position/: CMakeLists.txt  ReadMe  ReadMe.md  main.cpp  poly2.txt  solver.cpp
dot_position/src/: error_processing.cpp  errors_processing.h  main.cpp  parser.cpp  parser.h  readtext.cpp  solver.cpp  solver.h
hello/: CMakeLists.txt  hello.cpp  main.cpp
linked-list-medvedev/: .gitignore  CMakeLists.txt  data.txt
linked-list-medvedev/src/: list.cpp  list.h  main.cpp
optimal_path/: CMakeLists.txt  ReadMe.md  datas.cpp  datas.h  main.cpp  max.txt  path.txt  plot.py  plotting.h  task.md
optimal_path/load_png/: CMakeLists.txt
optimal_path/src/: CMakeLists.txt  datas.cpp  datas.h  main.cpp  min_search.cpp  min_search.h  plotting.cpp
optimal_path/testImage/: Readme.txt
optimal_way/: CMakeLists.txt  main.cpp
optimal_way/src/: algorythm.cpp
poly-calc/: CMakeLists.txt  ReadMe.md  main.cpp
poly-calc/src/: CMakeLists.txt  parsing.cpp  parsing.h  poly.cpp  poly.h
poly-medvedev/: .gitignore  CMakeLists.txt  example.txt
poly-medvedev/src/: main.cpp  poly.cpp  poly.h  poly_add.cpp  poly_add1.cpp
poly-medvedev/tests/: CMakeLists.txt  tests.cpp
prime_check/: CMakeLists.txt  is_prime.cpp  is_prime.h  main.cpp
template-poly/: CMakeLists.txt  ReadMe.md  main.cpp
template-poly/src/: poly.h  poly.hpp  quat.h  quat.hpp
